tests/miz/fail/parser/fail_parser_import_missing_semicolon_001.miz
import std.core
theorem T: thesis;
